# cosmwasm-template

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: test.yml
contracts/hello-world/: Cargo.toml
contracts/hello-world/src/: exec.rs  inst.rs  lib.rs  msg.rs  query.rs  state.rs
tests/: Cargo.toml
tests/base/: Cargo.toml
tests/base/src/: base_app.rs  hello_world.rs  lib.rs
tests/hello-world/: Cargo.toml
tests/hello-world/src/: test.rs
