[package]
name = "base"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = "1.1.3"
cw-storage-plus = { workspace = true }
cw-multi-test = { git = "https://github.com/coin98/cosmwasm-multi-test", branch = "v0.16.4" }
hello-world = { workspace = true }
anyhow = "1.0.71"